Latest changes of translations

--- a/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/introduction.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:52+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -39,7 +39,7 @@ msgstr "Tiêu Đề -- Header"
 
 #: ../../manual/editors/movie_clip_editor/introduction.rst:18
 msgid "Clip Menu"
-msgstr "-- Clip Menu"
+msgstr "Trình Đơn Đoạn Phim -- Clip Menu"
 
 #: ../../manual/editors/movie_clip_editor/introduction.rst:20
 msgid "Open Clip :kbd:`Alt-O`"
@@ -59,7 +59,7 @@ msgid ""
 "movie files and image sequences can be used in the Clip editor. When a "
 "movie clip is loaded into the Clip editor, extra panels are displayed in "
 "the interface."
-msgstr ":ref:`Data-block menu <ui-data-block>` used for add a movie file. Both movie files and image sequences can be used in the Clip editor. When a movie clip is loaded into the Clip editor, extra panels are displayed in the interface."
+msgstr ":ref:`Trình đơn khối dữ liệu -- Data-block menu <ui-data-block>` được sử dụng để cho thêm một tập tin phim. Cả tập tin phim và chuỗi hình ảnh đều có thể được sử dụng trong trình biên soạn phim - Clip Editor. Khi một đoạn phim được tải vào trình biên soạn phim, các bảng bổ sung sẽ được hiển thị trong giao diện."
 
 #: ../../manual/editors/movie_clip_editor/introduction.rst:33
 msgid "Movie Clip Editor with an opened clip."
@@ -115,14 +115,14 @@ msgstr "Khung Nhìn Chính -- Main View"
 
 #: ../../manual/editors/movie_clip_editor/introduction.rst:56
 msgid "Mini Timeline"
-msgstr "-- Mini Timeline"
+msgstr "Lịch trình thời gian nhỏ -- Mini Timeline"
 
 #: ../../manual/editors/movie_clip_editor/introduction.rst:58
 msgid ""
 "When a clip is loaded a Timeline is shown at bottom of the Preview. It "
 "expands over the full area limited by the animation range. You can move "
 "the Time Cursor by dragging with :kbd:`LMB`."
-msgstr "When a clip is loaded a Timeline is shown at bottom of the Preview. It expands over the full area limited by the animation range. You can move the Time Cursor by dragging with :kbd:`LMB`."
+msgstr "Khi đoạn phim đã được nạp, Lịch Trình Thời Gian sẽ được hiển thị ở đáy của cửa sổ Xem Trước. Nó được mở rộng trên toàn bộ diện tích, giới hạn bởi phạm vi hoạt hình. Bạn có thể di chuyển Con Trỏ Thời Gian bằng cách kéo rê dùng :kbd:`NCT - LMB`."
 
 #: ../../manual/editors/movie_clip_editor/introduction.rst:62
 msgid "The Timeline is composed of the following visual elements:"
