--- a/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/masking/scurve.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/masking/scurve.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:52+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/masking/scurve.rst:4
 msgid "S-Curves"
-msgstr "-- S-Curves"
+msgstr "Đường Cong-S -- S-Curves"
 
 #: ../../manual/editors/movie_clip_editor/masking/scurve.rst:6
 msgid ""
@@ -43,7 +43,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/masking/scurve.rst:19
 msgid "S-Curve explained."
-msgstr ""
+msgstr "Giải thích về đường cong-s"
 
 #: ../../manual/editors/movie_clip_editor/masking/scurve.rst:21
 msgid ""
