--- a/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/clip/properties/camera_data.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/clip/properties/camera_data.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:53+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -60,7 +60,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/camera_data.rst:23
 msgid "Pixel Aspect Ratio"
-msgstr "Tỷ Lệ Cân Xứng của Điểm Ảnh -- Pixel Aspect Ratio"
+msgstr "Tỷ Lệ Tương Quan của Điểm Ảnh -- Pixel Aspect Ratio"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/camera_data.rst:22
 msgid ""
@@ -72,7 +72,7 @@ msgstr "Is the pixel aspect of the CCD sensor. This value can be found in camera
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/camera_data.rst:29
 msgid "Optical Center"
-msgstr "-- Optical Center"
+msgstr "Trung Tâm Lăng Kính -- Optical Center"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/camera_data.rst:26
 msgid ""
@@ -81,7 +81,7 @@ msgid ""
 "cases. Check camera/lens specifications in such cases. To set the optical"
 " center to the center of image, there is a :kbd:`Return` button below the"
 " sliders."
-msgstr "Is the optical center of the lens used in the camera. In most cases it is equal to the image center, but it can be different in some special cases. Check camera/lens specifications in such cases. To set the optical center to the center of image, there is a :kbd:`Return` button below the sliders."
+msgstr "Là trung tâm quang học của ống kính được sử dụng trong máy quay phim. Trong hầu hết các trường hợp, nó tương tự như trung tâm của hình ảnh, song nó có thể khác trong một số trường hợp đặc biệt. Hãy kiểm tra thông số kỹ thuật của máy ảnh/ống kính trong những trường hợp như vậy. Để đặt trung tâm quang học thành trung tâm của hình ảnh, có một nút :kbd:`Return` nằm dưới các thanh trượt."
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/camera_data.rst:32
 msgid "Lens"
@@ -115,7 +115,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/camera_data.rst:46
 msgid "Division"
-msgstr "-- Division"
+msgstr "Chia -- Division"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/camera_data.rst:46
 msgid ""
@@ -145,4 +145,4 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/camera_data.rst:58
 msgid "K1, K2 and K3"
-msgstr ""
+msgstr "K1, K2 và K3"
