--- a/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/clip/properties/stabilization/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/clip/properties/stabilization/introduction.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-05 00:17+0000\n"
-"PO-Revision-Date: 2018-12-10 21:53+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -62,7 +62,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/introduction.rst:23
 msgid "How It Works"
-msgstr "-- How It Works"
+msgstr "Phương Pháp Làm Việc -- How It Works"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/introduction.rst:25
 msgid ""
@@ -114,7 +114,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/introduction.rst:50
 msgid "Stabilization Tracks"
-msgstr "-- Stabilization Tracks"
+msgstr "Dấu Mốc Giám Sát Ổn Định -- Stabilization Tracks"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/introduction.rst:52
 msgid ""
@@ -161,7 +161,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/introduction.rst:81
 msgid "Footage, Image and Canvas"
-msgstr "-- Footage, Image and Canvas"
+msgstr "Đoạn Phim, Hình Ảnh, Mặt Toan -- Footage, Image and Canvas"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/introduction.rst:83
 msgid ""
