--- a/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/clip/properties/stabilization/panel.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/clip/properties/stabilization/panel.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:53+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/panel.rst:5
 msgid "2D Stabilization Panel"
-msgstr "-- 2D Stabilization Panel"
+msgstr "Bảng Ổn Định Hóa 2D -- 2D Stabilization Panel"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/panel.rst:7
 msgid ""
@@ -80,7 +80,7 @@ msgstr "Reference point to anchor stabilization: other frames will be adjusted r
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/panel.rst:50
 msgid "Stabilization Type"
-msgstr "-- Stabilization Type"
+msgstr "Thể Loại Ổn Định Hóa -- Stabilization Type"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/panel.rst:47
 msgid "Rotation"
@@ -117,7 +117,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/panel.rst:57
 msgid "Rotation/Scale"
-msgstr "-- Rotation/Scale"
+msgstr "Xoay Chiều, Tỷ Lệ -- Rotation/Scale"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/panel.rst:57
 msgid ""
@@ -145,7 +145,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/panel.rst:66
 msgid "Expected Position X/Y"
-msgstr "-- Expected Position X/Y"
+msgstr "Vị Trí X/Y Dự Tính -- Expected Position X/Y"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/panel.rst:67
 msgid ""
@@ -165,7 +165,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/panel.rst:71
 msgid "Expected Zoom"
-msgstr "-- Expected Zoom"
+msgstr "Độ Thu-Phóng Dự Tính -- Expected Zoom"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/panel.rst:71
 msgid "Explicitly scale resulting frame to compensate zoom of original shot."
