--- a/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/introduction.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:53+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -52,7 +52,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/introduction.rst:25
 msgid "Manual Lens Calibration"
-msgstr "-- Manual Lens Calibration"
+msgstr "Hiệu Chuẩn Thấu Kính Thủ Công -- Manual Lens Calibration"
 
 #: ../../manual/editors/movie_clip_editor/tracking/introduction.rst:27
 msgid ""
@@ -88,7 +88,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/introduction.rst:46
 msgid "Camera and Object Motion Solving"
-msgstr "-- Camera and Object Motion Solving"
+msgstr "Giải Nghiệm Di Chuyển của Máy Quay Phim và Vật Thể -- Camera and Object Motion Solving"
 
 #: ../../manual/editors/movie_clip_editor/tracking/introduction.rst:48
 msgid ""
@@ -107,7 +107,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/introduction.rst:57
 msgid "Tools for Scene Orientation and Stabilization"
-msgstr "-- Tools for Scene Orientation and Stabilization"
+msgstr "Công Cụ để Định Hướng Cảnh và Ổn Định Hóa -- Tools for Scene Orientation and Stabilization"
 
 #: ../../manual/editors/movie_clip_editor/tracking/introduction.rst:59
 msgid ""
