--- a/blender_docs/locale/vi/LC_MESSAGES/editors/nla/tracks.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/nla/tracks.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:54+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -46,7 +46,7 @@ msgstr ""
 
 #: ../../manual/editors/nla/tracks.rst:18
 msgid "Mute (speaker icon)"
-msgstr "-- Mute (speaker icon)"
+msgstr "Câm Lặng/Giải Hoạt (biểu tượng cái loa phát thanh) -- Mute (speaker icon)"
 
 #: ../../manual/editors/nla/tracks.rst:18
 msgid ""
@@ -65,7 +65,7 @@ msgstr ""
 
 #: ../../manual/editors/nla/tracks.rst:25
 msgid "Action Track"
-msgstr "-- Action Track"
+msgstr "Dải Hành Động -- Action Track"
 
 #: ../../manual/editors/nla/tracks.rst:27
 msgid ""
@@ -76,7 +76,7 @@ msgstr ""
 
 #: ../../manual/editors/nla/tracks.rst:37
 msgid "Push Down (double down arrow peak icon)"
-msgstr "-- Push Down (double down arrow peak icon)"
+msgstr "Đẩn Xuống -- Push Down (double down arrow peak icon)"
 
 #: ../../manual/editors/nla/tracks.rst:33
 msgid "Turns the active action into a new NLA strip at the top of the NLA stack."
@@ -88,7 +88,7 @@ msgstr ""
 
 #: ../../manual/editors/nla/tracks.rst:55
 msgid "Pin (pin icon)"
-msgstr "-- Pin (pin icon)"
+msgstr "Ghim (biểu tượng cái đinh ghim) -- Pin (pin icon)"
 
 #: ../../manual/editors/nla/tracks.rst:40
 msgid ""
@@ -112,7 +112,7 @@ msgstr ""
 
 #: ../../manual/editors/nla/tracks.rst:64
 msgid "Action Stashing"
-msgstr "-- Action Stashing"
+msgstr "Cất Giấu Hành Động -- Action Stashing"
 
 #: ../../manual/editors/nla/tracks.rst:66
 msgid ""
@@ -132,7 +132,7 @@ msgstr ""
 
 #: ../../manual/editors/nla/tracks.rst:76
 msgid "Deleting & Converting"
-msgstr "-- Deleting & Converting"
+msgstr "Xóa và Chuyển Đổi -- Deleting & Converting"
 
 #: ../../manual/editors/nla/tracks.rst:78
 msgid ""
