--- a/blender_docs/locale/vi/LC_MESSAGES/editors/node_editor/navigate.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/node_editor/navigate.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-08 13:45+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -63,7 +63,7 @@ msgstr ":kbd:`Home`"
 
 #: ../../manual/editors/node_editor/navigate.rst:19
 msgid "Node Editor Actions"
-msgstr "-- Node Editor Actions"
+msgstr "Hành Động trong Trình Biên Soạn Nút -- Node Editor Actions"
 
 #: ../../manual/editors/node_editor/navigate.rst:21
 msgid ""
@@ -73,7 +73,7 @@ msgstr "When the cursor is in the area, several standard Blender hotkeys and mou
 
 #: ../../manual/editors/node_editor/navigate.rst:23
 msgid "Search... (add menu)"
-msgstr "-- Search... (add menu)"
+msgstr "Lùng Tìm (trình đơn cộng thêm) -- Search... (add menu)"
 
 #: ../../manual/editors/node_editor/navigate.rst:24
 msgid "Brings up a pop-up menu, allowing you to search the available nodes."
