--- a/blender_docs/locale/vi/LC_MESSAGES/editors/node_editor/nodes/frame.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/node_editor/nodes/frame.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:54+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -37,7 +37,7 @@ msgstr "Tính Chất -- Properties"
 
 #: ../../manual/editors/node_editor/nodes/frame.rst:19
 msgid "Label size"
-msgstr "-- Label size"
+msgstr "Kích Thước Nhãn -- Label size"
 
 #: ../../manual/editors/node_editor/nodes/frame.rst:20
 msgid ""
@@ -115,7 +115,7 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/nodes/frame.rst:48
 msgid "Add to Frame"
-msgstr "-- Add to Frame"
+msgstr "Thêm vào Khung Hình -- Add to Frame"
 
 #: ../../manual/editors/node_editor/nodes/frame.rst:54
 msgid ":kbd:`Ctrl-P`"
