--- a/blender_docs/locale/vi/LC_MESSAGES/editors/node_editor/nodes/selecting.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/node_editor/nodes/selecting.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:54+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -101,7 +101,7 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/nodes/selecting.rst:28
 msgid "Prefix, Suffix"
-msgstr "-- Prefix, Suffix"
+msgstr "Tiền Tố, Hậu Tố -- Prefix, Suffix"
 
 #: ../../manual/editors/node_editor/nodes/selecting.rst:29
 msgid "Matches the name property from start/end of the text."
@@ -109,13 +109,13 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/nodes/selecting.rst:30
 msgid "Activate Same Type Previous/Next :kbd:`Shift-]`/:kbd:`Shift-[`"
-msgstr "-- Activate Same Type Previous/Next :kbd:`Shift-]`/:kbd:`Shift-[`"
+msgstr "Kích hoạt chức năng nhảy đến Trước Đây/Tiếp Tới nếu Cùng Thể Loại -- Activate Same Type Previous/Next :kbd:`Shift-]`/:kbd:`Shift-[`"
 
 #: ../../manual/editors/node_editor/nodes/selecting.rst:31
 msgid ""
 "Finds the previous/next node of same type, activates the node, and "
 "ensures the node is visible."
-msgstr ""
+msgstr "Tìm nút trước đây/tiếp tới có cùng thể loại, kích hoạt nút, và đảm bảo là nút ấy nhìn thấy được."
 
 #: ../../manual/editors/node_editor/nodes/selecting.rst:33
 msgid "Find Node :kbd:`Ctrl-F`"
@@ -129,8 +129,8 @@ msgstr ""
 
 #: ../../<generated>:1
 msgid "Select multiple"
-msgstr "-- Select multiple"
+msgstr "Chọn nhiều -- Select multiple"
 
 #: ../../manual/editors/node_editor/nodes/selecting.rst:36
 msgid ":kbd:`Shift-LMB` or :kbd:`Shift-RMB` used for multiple node selection."
-msgstr ":kbd:`Shift-LMB` or :kbd:`Shift-RMB` used for multiple node selection."
+msgstr "Dùng :kbd:`Shift-LMB` hoặc :kbd:`Shift-RMB` để chọn nhiều nốt."
