--- a/blender_docs/locale/vi/LC_MESSAGES/editors/properties_editor.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/properties_editor.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-22 15:35+0000\n"
-"PO-Revision-Date: 2018-12-10 21:54+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -22,7 +22,7 @@ msgstr ""
 
 #: ../../manual/editors/properties_editor.rst:5
 msgid "Properties Editor"
-msgstr "-- Properties Editor"
+msgstr "Trình Biên Soạn Tính Chất -- Properties Editor"
 
 #: ../../manual/editors/properties_editor.rst:10
 msgid "Properties editor top part."
@@ -47,7 +47,7 @@ msgstr ""
 
 #: ../../manual/editors/properties_editor.rst:25
 msgid "Scene/Render"
-msgstr "-- Scene/Render"
+msgstr "Cảnh/Kết Xuất -- Scene/Render"
 
 #: ../../manual/editors/properties_editor.rst:27
 msgid ""
@@ -82,7 +82,7 @@ msgstr "World: :doc:`Blender Internal </render/blender_render/world/index>`, :do
 
 #: ../../manual/editors/properties_editor.rst:46
 msgid "Object & Object Data"
-msgstr "-- Object & Object Data"
+msgstr "Vật Thể & Dữ Liệu Vật Thể -- Object & Object Data"
 
 #: ../../manual/editors/properties_editor.rst:48
 msgid ""
