--- a/blender_docs/locale/vi/LC_MESSAGES/render/cycles/camera.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/render/cycles/camera.po
@@ -6,11 +6,11 @@
 #
 #, fuzzy
 msgid ""
-msgstr ""
+""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-24 23:43+0000\n"
-"PO-Revision-Date: 2018-12-07 01:52+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -810,7 +810,7 @@ msgstr "-- Camera Operations"
 
 #: ../../manual/render/cycles/camera.rst:431
 msgid "todo 2.8: move this to somewhere better"
-msgstr "todo 2.8: move this to somewhere better"
+msgstr "Nội dung cần viết thêm 2.8: move this to somewhere better"
 
 #: ../../manual/render/cycles/camera.rst:434
 msgid "Changing the Active Camera"
