--- a/blender_docs/locale/vi/LC_MESSAGES/rigging/constraints/relationship/follow_path.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/rigging/constraints/relationship/follow_path.po
@@ -6,11 +6,11 @@
 #
 #, fuzzy
 msgid ""
-msgstr ""
+""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-11-14 21:46+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -160,7 +160,7 @@ msgstr "Hoạt Họa Đường Dẫn -- Animate Path"
 msgid ""
 "Adds an F-Curve with options for the start and end frame. ToDo: from "
 "above."
-msgstr "Adds an F-Curve with options for the start and end frame. ToDo: from above."
+msgstr "Adds an F-Curve with options for the start and end frame. Nội dung cần viết thêm: từ điều đã nói đến ở trên."
 
 #: ../../manual/rigging/constraints/relationship/follow_path.rst:86
 msgid "Curve Radius"
