--- a/blender_docs/locale/vi/LC_MESSAGES/addons/io_gltf2.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/addons/io_gltf2.po
@@ -2,7 +2,7 @@
 # Copyright (C) : This page is licensed under a CC-BY-SA 4.0 Int. License
 # This file is distributed under the same license as the Blender 2.80 Manual
 # package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2019.
+# Hoang Duy Tran <hoangduytran1960@googlemail.com>, 2019.
 #
 #, fuzzy
 msgid ""
@@ -10,9 +10,10 @@ msgstr ""
 "Project-Id-Version: Blender 2.80 Manual 2.80\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-02-13 04:08+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
+"Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
+"Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
+"Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -269,7 +270,7 @@ msgstr "Tính Chất -- Properties"
 
 #: ../../manual/addons/io_gltf2.rst:130
 msgid "Log Level"
-msgstr "-- Log Level"
+msgstr "Mức Nhật Ký -- Log Level"
 
 #: ../../manual/addons/io_gltf2.rst:131
 msgid "Set level of log to display."
@@ -277,7 +278,7 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:132
 msgid "Pack Images"
-msgstr "-- Pack Images"
+msgstr "Đóng Gói Hình Ảnh -- Pack Images"
 
 #: ../../manual/addons/io_gltf2.rst:133
 msgid "Pack all images into the blend-file."
@@ -307,7 +308,7 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:149
 msgid "glTF Binary (``.glb``)"
-msgstr "-- glTF Binary (``.glb``)"
+msgstr "glTF Nhị Phân -- glTF Binary (``.glb``)"
 
 #: ../../manual/addons/io_gltf2.rst:149
 msgid ""
@@ -317,7 +318,7 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:152
 msgid "glTF Embedded (``.gltf``)"
-msgstr "-- glTF Embedded (``.gltf``)"
+msgstr "glTF Gắn Sẵn -- glTF Embedded (``.gltf``)"
 
 #: ../../manual/addons/io_gltf2.rst:152
 msgid ""
@@ -327,7 +328,7 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:156
 msgid "glTF Separate (``.gltf`` + ``.bin`` + textures)"
-msgstr "-- glTF Separate (``.gltf`` + ``.bin`` + textures)"
+msgstr "glTF Tách Phân -- glTF Separate (``.gltf`` + ``.bin`` + textures)"
 
 #: ../../manual/addons/io_gltf2.rst:155
 msgid ""
@@ -353,11 +354,11 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:162
 msgid "Y Up"
-msgstr "-- Y Up"
+msgstr "Y Lên Trên -- Y Up"
 
 #: ../../manual/addons/io_gltf2.rst:163
 msgid "Export using glTF convention, +Y up."
-msgstr ""
+msgstr "Xuất dùng quy ước glTF, +Y hướng lên trên."
 
 #: ../../manual/addons/io_gltf2.rst:165
 msgid "Export custom properties as glTF extras."
@@ -365,7 +366,7 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:167
 msgid "Remember Export Settings"
-msgstr "-- Remember Export Settings"
+msgstr "Ghi Nhớ các Sắp Đặt Xuất -- Remember Export Settings"
 
 #: ../../manual/addons/io_gltf2.rst:167
 msgid ""
@@ -375,11 +376,11 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:171
 msgid "Copyright"
-msgstr "-- Copyright"
+msgstr "Bản Quyền -- Copyright"
 
 #: ../../manual/addons/io_gltf2.rst:170
 msgid "Legal rights and conditions for the model."
-msgstr ""
+msgstr "Những quyền hợp pháp và điều kiện đối với mô hình."
 
 #: ../../manual/addons/io_gltf2.rst:176
 msgid "UVs"
@@ -399,11 +400,11 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:180
 msgid "Tangents"
-msgstr "-- Tangents"
+msgstr "Tiếp Tuyến -- Tangents"
 
 #: ../../manual/addons/io_gltf2.rst:181
 msgid "Export vertex tangents with meshes."
-msgstr ""
+msgstr "Xuất các tiếp tuyến điểm đỉnh với khung lưới."
 
 #: ../../manual/addons/io_gltf2.rst:184
 msgid "Vertex Colors"
@@ -422,8 +423,9 @@ msgid "Export cameras."
 msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:193
+#, fuzzy
 msgid "Punctual Lights"
-msgstr "-- Punctual Lights"
+msgstr "Nguồn sáng -- Punctual Lights"
 
 #: ../../manual/addons/io_gltf2.rst:192
 msgid ""
@@ -437,7 +439,7 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:202
 msgid "Texture Transforms"
-msgstr "-- Texture Transforms"
+msgstr "Biến Hóa Chất Liệu -- Texture Transforms"
 
 #: ../../manual/addons/io_gltf2.rst:201
 msgid ""
@@ -455,11 +457,11 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:209
 msgid "Limit to Playback Range"
-msgstr "-- Limit to Playback Range"
+msgstr "Giới Hạn trong Phạm Vi Chơi Lại -- Limit to Playback Range"
 
 #: ../../manual/addons/io_gltf2.rst:210
 msgid "Clips animations to selected playback range."
-msgstr ""
+msgstr "Thu giới hạn hoạt hình vào phạm vi chơi lại được chọn."
 
 #: ../../manual/addons/io_gltf2.rst:211
 msgid "Sampling Rate"
@@ -471,7 +473,7 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:213
 msgid "Keyframes Start at 0"
-msgstr "-- Keyframes Start at 0"
+msgstr "Khung Hình Bắt Đầu tại 0 -- Keyframes Start at 0"
 
 #: ../../manual/addons/io_gltf2.rst:214
 msgid "Keyframes start at 0, instead of 1."
@@ -479,15 +481,15 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:215
 msgid "Always Sample Animations"
-msgstr "-- Always Sample Animations"
+msgstr "Luôn Luôn Lấy Mẫu Vật Hoạt Hình -- Always Sample Animations"
 
 #: ../../manual/addons/io_gltf2.rst:216
 msgid "Apply sampling to all animations."
-msgstr ""
+msgstr "Áp dụng mẫu vật vào tất cả các hoạt hình."
 
 #: ../../manual/addons/io_gltf2.rst:217
 msgid "Use Current Frame"
-msgstr "-- Use Current Frame"
+msgstr "Sử Dụng Khung Hình Hiện Tại -- Use Current Frame"
 
 #: ../../manual/addons/io_gltf2.rst:218
 msgid "Export the scene in the current animation frame."
@@ -495,15 +497,15 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:219
 msgid "Skinning"
-msgstr "-- Skinning"
+msgstr "Bọc Da -- Skinning"
 
 #: ../../manual/addons/io_gltf2.rst:220
 msgid "Export skinning (armature) data."
-msgstr ""
+msgstr "Xuất dữ liệu bọc da (cốt)."
 
 #: ../../manual/addons/io_gltf2.rst:221
 msgid "Bake Skinning Constraints"
-msgstr "-- Bake Skinning Constraints"
+msgstr "Nướng các Ràng Buộc Bọc Da -- Bake Skinning Constraints"
 
 #: ../../manual/addons/io_gltf2.rst:222
 msgid "Apply skinning constraints to armatures."
@@ -511,7 +513,7 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:223
 msgid "Include All Bone Influences"
-msgstr "-- Include All Bone Influences"
+msgstr "Bao Gồm Toàn Bộ Ảnh Hưởng của Xương -- Include All Bone Influences"
 
 #: ../../manual/addons/io_gltf2.rst:224
 msgid ""
@@ -529,15 +531,15 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:227
 msgid "Shape Key Normals"
-msgstr "-- Shape Key Normals"
+msgstr "Pháp Tuyến của Hình Mẫu -- Shape Key Normals"
 
 #: ../../manual/addons/io_gltf2.rst:228
 msgid "Export vertex normals with shape keys (morph targets)."
-msgstr ""
+msgstr "Xuất pháp tuyến điểm đỉnh với các hình mẫu ()"
 
 #: ../../manual/addons/io_gltf2.rst:231
 msgid "Shape Key Tangents"
-msgstr "-- Shape Key Tangents"
+msgstr "Tiếp Tuyến của Hình Mẫu -- Shape Key Tangents"
 
 #: ../../manual/addons/io_gltf2.rst:230
 msgid "Export vertex tangents with shape keys (morph targets)."
@@ -545,7 +547,7 @@ msgstr ""
 
 #: ../../manual/addons/io_gltf2.rst:234
 msgid "Contributing"
-msgstr "-- Contributing"
+msgstr "Đóng Góp -- Contributing"
 
 #: ../../manual/addons/io_gltf2.rst:236
 msgid ""
@@ -555,4 +557,4 @@ msgid ""
 " This importer/exporter is developed through the `Blender glTF IO "
 "repository <https://github.com/KhronosGroup/glTF-Blender-IO>`__, where "
 "you can file bug reports, submit feature requests, or contribute code."
-msgstr "glTF 2.0 is a relatively new file format. Discussion and development of the format occur on the Khronos Group `GitHub repository <https://github.com/KhronosGroup/glTF>`__, and feedback there is welcome. This importer/exporter is developed through the `Blender glTF IO repository <https://github.com/KhronosGroup/glTF-Blender-IO>`__, where you can file bug reports, submit feature requests, or contribute code."
+msgstr "glTF 2.0 là một định dạng khá mới mẻ. `Kho GitHub - GitHub repository <https://github.com/KhronosGroup/glTF>`__ của nhóm Khronos là nơi bàn luận và xây dựng định dạng này. Chúng tôi sẵn lòng chấp nhận những ý kiến hồi phản. Trình xuất/nhập khẩu này được xây dựng thông qua kho `Blender glTF IO repository <https://github.com/KhronosGroup/glTF-Blender-IO>`__, nơi bạn có thể báo cáo các lỗi lầm của phần mềm, đồng thời đăng các để đạt về những tính năng mới, hoặc đóng góp mã nguồn nữa."
