--- a/blender_docs/locale/vi/LC_MESSAGES/editors/dope_sheet/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/dope_sheet/introduction.po
@@ -6,11 +6,11 @@
 #
 #, fuzzy
 msgid ""
-msgstr ""
+""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-10 23:05+0000\n"
-"PO-Revision-Date: 2018-12-11 16:58+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -80,7 +80,7 @@ msgstr ":ref:`Mask <dope-sheet-mask>`"
 
 #: ../../manual/editors/dope_sheet/introduction.rst:35
 msgid "Cache File: Alembic Todo 2.78."
-msgstr "Cache File: Alembic Todo 2.78."
+msgstr "Tập Tin Bộ Nhớ Đệm: Alembic, nội dung cần viết thêm 2.78."
 
 #: ../../manual/editors/dope_sheet/introduction.rst:39
 msgid "Interface"
@@ -143,11 +143,7 @@ msgid ""
 ":doc:`Markers </animation/markers>` are used to denote frames with key "
 "points or significant events within an animation. Like with most "
 "animation editors, markers are shown at the bottom of the editor."
-msgstr ""
-":doc:`Dấu Mốc -- Markers </animation/markers>` được sử dụng để biểu thị "
-"khung hình có những điểm trọng yếu hoặc các sự đáng phải để ý trong một "
-"hoạt hình. Giống hầu hết các trình biên soạn hoạt họa, điểm đánh dấu được"
-" hiển thị ở dưới đáy của trình biên soạn."
+msgstr ":doc:`Dấu Mốc -- Markers </animation/markers>` được sử dụng để biểu thị khung hình có những điểm trọng yếu hoặc các sự đáng phải để ý trong một hoạt hình. Giống hầu hết các trình biên soạn hoạt họa, điểm đánh dấu được hiển thị ở dưới đáy của trình biên soạn."
 
 #: ../../manual/editors/dope_sheet/introduction.rst:79
 msgid "Markers in animation editor."
@@ -157,13 +153,11 @@ msgstr "Dấu Mốc trong Trình Biên Soạn Hoạt Họa."
 msgid ""
 "For descriptions of the different marker tools see :ref:`Editing Markers "
 "<animation-markers-editing>`."
-msgstr ""
-"Để biết nội dung về các công cụ đánh dấu khác nhau, hãy xem :ref:`Biên "
-"Soạn các Dấu Mốc --Editing Markers <animation-markers-editing>`."
+msgstr "Để biết nội dung về các công cụ đánh dấu khác nhau, hãy xem :ref:`Biên Soạn các Dấu Mốc --Editing Markers <animation-markers-editing>`."
 
 #: ../../manual/editors/dope_sheet/introduction.rst:85
 msgid "Key Menu"
-msgstr "Trình đơn Khóa Hóa -- Key Menu"
+msgstr "Trình Đơn Khóa Hóa -- Key Menu"
 
 #: ../../manual/editors/dope_sheet/introduction.rst:88
 msgid "Keyframe Type :kbd:`R`"
@@ -175,7 +169,7 @@ msgstr "Sets the :ref:`keyframe-type` of the selected keyframes."
 
 #: ../../manual/editors/dope_sheet/introduction.rst:90
 msgid "See :doc:`F-Curve </editors/graph_editor/fcurves/index>`."
-msgstr "See :doc:`F-Curve </editors/graph_editor/fcurves/index>`."
+msgstr "Xin xem thêm :doc:`F-Curve </editors/graph_editor/fcurves/index>`."
 
 #: ../../manual/editors/dope_sheet/introduction.rst:94
 msgid "Main Region"
@@ -217,4 +211,4 @@ msgstr ""
 
 #: ../../manual/editors/dope_sheet/introduction.rst:118
 msgid "See :doc:`/editors/graph_editor/channels`."
-msgstr "See :doc:`/editors/graph_editor/channels`."
+msgstr "Xin xem thêm :doc:`/editors/graph_editor/channels`."
