--- a/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/masking/selecting_editing.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/masking/selecting_editing.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-08 13:45+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -120,7 +120,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/masking/selecting_editing.rst:51
 msgid "Curve Handles"
-msgstr "-- Curve Handles"
+msgstr "Tay Cầm của Đường Cong -- Curve Handles"
 
 #: ../../manual/editors/movie_clip_editor/masking/selecting_editing.rst:53
 msgid "Slide Spline Curvature"
