--- a/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/properties/proxy.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/properties/proxy.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:52+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/properties/proxy.rst:4
 msgid "Proxy/Timecode Panel"
-msgstr "-- Proxy/Timecode Panel"
+msgstr "Bảng Đại Diện/Mã Thời Gian -- Proxy/Timecode Panel"
 
 #: ../../manual/editors/movie_clip_editor/properties/proxy.rst:6
 msgid ""
@@ -46,7 +46,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/properties/proxy.rst:25
 msgid "Build Original"
-msgstr "-- Build Original"
+msgstr "Xây Dựng theo Bản Gốc -- Build Original"
 
 #: ../../manual/editors/movie_clip_editor/properties/proxy.rst:26
 msgid "Used to define which resolutions of proxy images should be built."
@@ -54,7 +54,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/properties/proxy.rst:28
 msgid "Build Undistorted"
-msgstr "-- Build Undistorted"
+msgstr "Xây Dựng Bất Biến Dạng -- Build Undistorted"
 
 #: ../../manual/editors/movie_clip_editor/properties/proxy.rst:28
 msgid ""
@@ -83,7 +83,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/properties/proxy.rst:36
 msgid "Rebuild Proxy"
-msgstr "-- Rebuild Proxy"
+msgstr "Tái Dựng Bản Đại Diện -- Rebuild Proxy"
 
 #: ../../manual/editors/movie_clip_editor/properties/proxy.rst:37
 msgid ""
@@ -103,7 +103,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/properties/proxy.rst:45
 msgid "Proxy Render Size"
-msgstr "-- Proxy Render Size"
+msgstr "Kích Thước Kết Xuất của Bản Đại Diện -- Proxy Render Size"
 
 #: ../../manual/editors/movie_clip_editor/properties/proxy.rst:41
 msgid ""
@@ -123,7 +123,7 @@ msgid ""
 " Blender to calculate the position of a needed frame in the stream works "
 "inaccurately and can give errant result. There are two possible ways to "
 "avoid this:"
-msgstr "When you are working with footage directly copied from a camera without pre-processing it, there might be bunch of artifacts, mostly due to seeking a given frame in sequence. This happens because such footage usually does not have correct frame rate values in their headers. So, for Blender to calculate the position of a needed frame in the stream works inaccurately and can give errant result. There are two possible ways to avoid this:"
+msgstr "Khi bạn đang làm việc với các cảnh quay, được sao chép trực tiếp từ máy quay phim, chưa được xử lý trước, thì có thể chúng có chứa một số giả tượng, chủ yếu là do việc lùng tìm một khung hình nhất định trong trình tự. Điều này xảy ra vì các cảnh quay như vậy thường không có giá trị tốc độ khung hình chính xác trong phần đầu đề (headers) của chúng. Vì vậy, khi Blender tính toán vị trí của một khung hình cần thiết nào đó trong luồng dữ liệu phim, việc lùng tìm sẽ hoạt động không được chính xác và cung cấp kết quả sai lầm. Có hai cách để tránh điều này:"
 
 #: ../../manual/editors/movie_clip_editor/properties/proxy.rst:56
 msgid ""
