--- a/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/clip/properties/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/clip/properties/introduction.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:53+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -25,11 +25,11 @@ msgstr "Giới Thiệu -- Introduction"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:10
 msgid "Objects Panel"
-msgstr "-- Objects Panel"
+msgstr "Bảng Vật Thể -- Objects Panel"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:16
 msgid "Objects panel."
-msgstr ""
+msgstr "Bảng các vật thể."
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:18
 msgid ""
@@ -40,7 +40,7 @@ msgid ""
 " all added objects are used for object tracking and solving only. These "
 "objects can be referenced from Follow Track and Object Solver "
 "constraints. Follow Track uses the camera object by default."
-msgstr "This panel contains a :ref:`list view <ui-list-view>` with all objects which can be used for tracking, camera or object solving. By default there is only one object in this list which is used for camera solving. It cannot be deleted and other objects cannot be used for camera solving; all added objects are used for object tracking and solving only. These objects can be referenced from Follow Track and Object Solver constraints. Follow Track uses the camera object by default."
+msgstr "Bảng này chứa một :ref:`Danh sách liệt kê <ui-list-view>` tất cả các đối tượng có thể được sử dụng để giám sát, máy quay phim hoặc giải nghiệm vật thể. Theo mặc định, chỉ có một đối tượng trong danh sách này được sử dụng để giải nghiệm máy quay phim. Nó không thể bị xóa đi được và các đối tượng khác không thể được sử dụng để giải nghiệm máy quay phim; tất cả các đối tượng được thêm vào chỉ được sử dụng để theo dõi và giải nghiệm đối tượng mà thôi. Các đối tượng này có thể được tham chiếu từ các ràng buộc của Đi Theo Giám Sát (Follow Track) và Giải Nghiệm Vật Thể (Object Solver). Theo mặc định ràng buộc Đi Theo Giám Sát sử dụng vật thể máy quay phim."
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:26
 msgid ""
@@ -59,11 +59,11 @@ msgstr "The usage for all kind of objects (used for camera and object tracking) 
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:35
 msgid "Track Panel"
-msgstr "-- Track Panel"
+msgstr "Bảng Giám Sát -- Track Panel"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:41
 msgid "Track panel."
-msgstr ""
+msgstr "Bảng giám sát."
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:44
 msgid "Name"
@@ -77,7 +77,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:47
 msgid "Enable (eye icon)"
-msgstr "-- Enable (eye icon)"
+msgstr "Bật (biểu tượng con mắt)-- Enable (eye icon)"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:47
 msgid ""
@@ -98,7 +98,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:56
 msgid "Track Preview Widget"
-msgstr "-- Track Preview Widget"
+msgstr "Thành Tố Xem Trước Giám Sát -- Track Preview Widget"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:58
 msgid ""
@@ -144,7 +144,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:81
 msgid "Grayscale Preview (B/W)"
-msgstr "-- Grayscale Preview (B/W)"
+msgstr "Xem trước gam xám -- Grayscale Preview (B/W)"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:82
 msgid "Display the preview image as gray-scale even if all channels are enabled."
@@ -152,11 +152,11 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:84
 msgid "Alpha Preview (black/white icon)"
-msgstr "-- Alpha Preview (black/white icon)"
+msgstr "Xem trước Alpha (biểu tượng đen/trắng)-- Alpha Preview (black/white icon)"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:84
 msgid "ToDo 2.64."
-msgstr ""
+msgstr "Nội dung cần viết thêm 2.64."
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:100
 msgid "Weight"
@@ -190,7 +190,7 @@ msgstr "Another use of Track Weights is when you want to reconstruct a scene fro
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:103
 msgid "Stabilization Weight"
-msgstr "-- Stabilization Weight"
+msgstr "Trọng Lượng Ổn Định -- Stabilization Weight"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:103
 msgid ""
@@ -229,11 +229,11 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:122
 msgid "Plane Track Panel"
-msgstr "-- Plane Track Panel"
+msgstr "Bảng Giám Sát Mặt Phẳng -- Plane Track Panel"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:128
 msgid "Plane Track panel."
-msgstr ""
+msgstr "Bảng giám sát mặt phẳng."
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:130
 msgid ""
@@ -277,7 +277,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:147
 msgid "Tracking Settings Panel"
-msgstr "-- Tracking Settings Panel"
+msgstr "Bảng Sắp Đặt Giám Sát -- Tracking Settings Panel"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:149
 msgid ""
@@ -287,7 +287,7 @@ msgstr "This panel contains :ref:`tracker settings <clip-tracking-settings>` for
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:153
 msgid "Grease Pencil Panel"
-msgstr "-- Grease Pencil Panel"
+msgstr "Bảng Bút Chì Dầu -- Grease Pencil Panel"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/introduction.rst:155
 msgid ""
