--- a/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/clip/properties/marker.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/clip/properties/marker.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-08 13:45+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -114,11 +114,11 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/marker.rst:42
 msgid "Marker Panel"
-msgstr "-- Marker Panel"
+msgstr "Bảng Dấu Mốc -- Marker Panel"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/marker.rst:48
 msgid "Marker schematic."
-msgstr ""
+msgstr "Sơ đồ dấu mốc."
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/marker.rst:50
 msgid ""
