--- a/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/clip/properties/stabilization/workflow.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/movie_clip_editor/tracking/clip/properties/stabilization/workflow.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-19 13:59+0000\n"
-"PO-Revision-Date: 2018-12-10 21:53+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -34,7 +34,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/workflow.rst:12
 msgid "The Simple Case"
-msgstr "-- The Simple Case"
+msgstr "Trường Hợp Đơn Giản -- The Simple Case"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/workflow.rst:14
 msgid ""
@@ -93,7 +93,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/workflow.rst:36
 msgid "Avoid Problematic Footage"
-msgstr "-- Avoid Problematic Footage"
+msgstr "Tránh các Đoạn Phim Có Vấn Đề -- Avoid Problematic Footage"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/workflow.rst:38
 msgid ""
@@ -156,7 +156,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/workflow.rst:69
 msgid "Elaborate Movements"
-msgstr "-- Elaborate Movements"
+msgstr "Di Chuyển Phức Tạp -- Elaborate Movements"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/workflow.rst:71
 msgid ""
@@ -211,7 +211,7 @@ msgstr ""
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/workflow.rst:92
 msgid "Animating Stabilization Parameters"
-msgstr "-- Animating Stabilization Parameters"
+msgstr "Hoạt Hình các Tham Số Ổn Định Hóa -- Animating Stabilization Parameters"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/workflow.rst:94
 msgid ""
@@ -232,7 +232,7 @@ msgstr "Animating some parameters over duration of the shot is often necessary, 
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/workflow.rst:106
 msgid "Irregular Track Setup"
-msgstr "-- Irregular Track Setup"
+msgstr "Sắp Đặt Giám Sát Bất Thường -- Irregular Track Setup"
 
 #: ../../manual/editors/movie_clip_editor/tracking/clip/properties/stabilization/workflow.rst:108
 msgid ""
