--- a/blender_docs/locale/vi/LC_MESSAGES/editors/nla/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/nla/introduction.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:54+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -96,7 +96,7 @@ msgstr "For descriptions of the different marker tools, see :ref:`Editing Marker
 
 #: ../../manual/editors/nla/introduction.rst:47
 msgid "Edit Menu"
-msgstr "-- Edit Menu"
+msgstr "Trình Đơn Biên Soạn -- Edit Menu"
 
 #: ../../manual/editors/nla/introduction.rst:53
 msgid "Add"
