--- a/blender_docs/locale/vi/LC_MESSAGES/editors/nla/strips.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/nla/strips.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:54+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -33,7 +33,7 @@ msgstr "There are four kinds of strips: Action, Transition, Sound clip and Meta.
 
 #: ../../manual/editors/nla/strips.rst:14
 msgid "Action Strips"
-msgstr "-- Action Strips"
+msgstr "Dải Hành Động -- Action Strips"
 
 #: ../../manual/editors/nla/strips.rst:16
 msgid ""
@@ -45,7 +45,7 @@ msgstr "An Action Strip is a container of keyframe data of an action. Any action
 
 #: ../../manual/editors/nla/strips.rst:23
 msgid "Transition Strips"
-msgstr "-- Transition Strips"
+msgstr "Dải Chuyển Cảnh -- Transition Strips"
 
 #: ../../manual/editors/nla/strips.rst:25
 msgid ""
@@ -60,7 +60,7 @@ msgstr ""
 
 #: ../../manual/editors/nla/strips.rst:35
 msgid "Sound Clip Strips"
-msgstr "-- Sound Clip Strips"
+msgstr "Dải Âm Thanh -- Sound Clip Strips"
 
 #: ../../manual/editors/nla/strips.rst:37
 msgid ""
@@ -134,7 +134,7 @@ msgstr "Biên Soạn -- Editing"
 
 #: ../../manual/editors/nla/strips.rst:79
 msgid "Start Tweaking Strips Action"
-msgstr "-- Start Tweaking Strips Action"
+msgstr "Bắt Đầu Hiệu Chỉnh Hành Động của Dải -- Start Tweaking Strips Action"
 
 #: ../../manual/editors/nla/strips.rst:84
 msgid ":menuselection:`Edit --> Start Tweaking Strips Action`"
