--- a/blender_docs/locale/vi/LC_MESSAGES/editors/node_editor/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/node_editor/introduction.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-22 15:35+0000\n"
-"PO-Revision-Date: 2018-12-10 21:54+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -139,7 +139,7 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/introduction.rst:62
 msgid "Material, Compositing or Texture buttons"
-msgstr "-- Material, Compositing or Texture buttons"
+msgstr "Nút Nguyên Liệu, Tổng Hợp, hoặc Chất Liệu -- Material, Compositing or Texture buttons"
 
 #: ../../manual/editors/node_editor/introduction.rst:63
 msgid ""
@@ -160,7 +160,7 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/introduction.rst:68
 msgid "Use Pinned"
-msgstr "-- Use Pinned"
+msgstr "Sử Dụng Ghim Lại -- Use Pinned"
 
 #: ../../manual/editors/node_editor/introduction.rst:68
 msgid ""
@@ -171,7 +171,7 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/introduction.rst:72
 msgid "Go to Parent button"
-msgstr "-- Go to Parent button"
+msgstr "Nút Đi đến Phụ Huynh -- Go to Parent button"
 
 #: ../../manual/editors/node_editor/introduction.rst:71
 msgid "This button allows you go to parent node tree e.g. leaving a group."
@@ -221,7 +221,7 @@ msgstr "`Auto-Offset. A workflow enhancement for Blender's node editor <https://
 
 #: ../../manual/editors/node_editor/introduction.rst:99
 msgid "Further Menus"
-msgstr "-- Further Menus"
+msgstr "Những Trình Đơn Khác -- Further Menus"
 
 #: ../../manual/editors/node_editor/introduction.rst:101
 msgid "Snap"
@@ -233,7 +233,7 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/introduction.rst:109
 msgid "Snap Node Element Selector"
-msgstr "-- Snap Node Element Selector"
+msgstr "Bảng Chọn Bám Dính vào Phần Tử của Nút -- Snap Node Element Selector"
 
 #: ../../manual/editors/node_editor/introduction.rst:104
 msgid "This selector provide the following node elements for snap:"
@@ -313,7 +313,7 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/introduction.rst:119
 msgid "Copy Nodes"
-msgstr "-- Copy Nodes"
+msgstr "Nút Sao Chép -- Copy Nodes"
 
 #: ../../manual/editors/node_editor/introduction.rst:120
 msgid "This button allows you copy selected nodes to the clipboard."
@@ -321,7 +321,7 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/introduction.rst:123
 msgid "Paste Nodes"
-msgstr "-- Paste Nodes"
+msgstr "Nút Dán -- Paste Nodes"
 
 #: ../../manual/editors/node_editor/introduction.rst:122
 msgid ""
