--- a/blender_docs/locale/vi/LC_MESSAGES/editors/node_editor/nodes/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/node_editor/nodes/introduction.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-04 21:09+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -29,7 +29,7 @@ msgstr "Nội dung cần viết thêm."
 
 #: ../../manual/editors/node_editor/nodes/introduction.rst:10
 msgid "Adding"
-msgstr "-- Adding"
+msgstr "Thêm -- Adding"
 
 #: ../../manual/editors/node_editor/nodes/introduction.rst:12
 msgid "Reference"
@@ -69,7 +69,7 @@ msgstr ":kbd:`Shift-A`"
 
 #: ../../manual/editors/node_editor/nodes/introduction.rst:20
 msgid "Nodes are added in two ways to the Node editor:"
-msgstr "Nodes are added in two ways to the Node editor:"
+msgstr "Có hai cách để cho thêm các nút vào Trình Biên Soạn Nút:"
 
 #: ../../manual/editors/node_editor/nodes/introduction.rst:22
 msgid ""
