--- a/blender_docs/locale/vi/LC_MESSAGES/editors/node_editor/nodes/parts.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/node_editor/nodes/parts.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:54+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/nodes/parts.rst:7
 msgid "Node Parts"
-msgstr "-- Node Parts"
+msgstr "Các Phần Tử của Nút -- Node Parts"
 
 #: ../../manual/editors/node_editor/nodes/parts.rst:9
 msgid ""
@@ -65,7 +65,7 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/nodes/parts.rst:42
 msgid "Color (yellow)"
-msgstr "-- Color (yellow)"
+msgstr "Màu Sắc (màu vàng) -- Color (yellow)"
 
 #: ../../manual/editors/node_editor/nodes/parts.rst:42
 msgid ""
@@ -75,7 +75,7 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/nodes/parts.rst:49
 msgid "Numeric (gray)"
-msgstr "-- Numeric (gray)"
+msgstr "Số (màu ghi) -- Numeric (gray)"
 
 #: ../../manual/editors/node_editor/nodes/parts.rst:45
 msgid ""
@@ -89,7 +89,7 @@ msgstr "Indicates numeric value's information. It can either be a single numeric
 
 #: ../../manual/editors/node_editor/nodes/parts.rst:51
 msgid "Vector (blue)"
-msgstr "-- Vector (blue)"
+msgstr "Véctơ (màu lam) -- Vector (blue)"
 
 #: ../../manual/editors/node_editor/nodes/parts.rst:52
 msgid "Indicates vector, coordinate and normal information."
@@ -97,7 +97,7 @@ msgstr ""
 
 #: ../../manual/editors/node_editor/nodes/parts.rst:55
 msgid "Shader (green)"
-msgstr "-- Shader (green)"
+msgstr "Bộ tô bóng (màu lục) -- Shader (green)"
 
 #: ../../manual/editors/node_editor/nodes/parts.rst:54
 msgid "Used for shaders in :doc:`Cycles </render/cycles/index>`."
