--- a/blender_docs/locale/vi/LC_MESSAGES/editors/text_editor.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/text_editor.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2018-12-10 21:54+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -49,7 +49,7 @@ msgstr ""
 
 #: ../../manual/editors/text_editor.rst:30
 msgid "Editor type"
-msgstr "-- Editor type"
+msgstr "Thể Loại Trình Biên Soạn -- Editor type"
 
 #: ../../manual/editors/text_editor.rst:31
 msgid "The standard editor selection button."
@@ -89,7 +89,7 @@ msgstr ""
 
 #: ../../manual/editors/text_editor.rst:44
 msgid "Run Script / Script Node Update"
-msgstr "-- Run Script / Script Node Update"
+msgstr "Thi hành tập lệnh / Cập Nhật Tập Lệnh của Nút  -- Run Script / Script Node Update"
 
 #: ../../manual/editors/text_editor.rst:45
 #: ../../manual/editors/text_editor.rst:78
@@ -108,7 +108,7 @@ msgid ""
 "name must end with '.py'). Read more about the registration of Python "
 "modules in `API documentation "
 "<https://docs.blender.org/api/2.79/info_overview.html#registration>`__."
-msgstr "Registers the current text data-block as a module on loading (the text name must end with '.py'). Read more about the registration of Python modules in `API documentation <https://docs.blender.org/api/2.79/info_overview.html#registration>`__."
+msgstr "Đăng ký khối dữ liệu văn bản hiện tại như một môđun trong quá trình nạp (tên của văn bản phải được kết thúc bằng đuôi '.py'). Xin đọc thêm về quá trình đăng ký các môđun của Python trong barb `Tài liệu về Giao Diện Lập Trình -- API documentation <https://docs.blender.org/api/2.79/info_overview.html#registration>`__."
 
 #: ../../manual/editors/text_editor.rst:53
 msgid "Label"
@@ -130,7 +130,7 @@ msgstr "Đáy của Tập Tin -- Bottom of File"
 
 #: ../../manual/editors/text_editor.rst:60
 msgid "Moves the view and cursor to the end of the text."
-msgstr ""
+msgstr "Di chuyển khung nhìn và con trỏ đến cuối văn bản."
 
 #: ../../manual/editors/text_editor.rst:61
 msgid "Top of File"
@@ -138,7 +138,7 @@ msgstr "Đầu của Tập Tin -- Top of File"
 
 #: ../../manual/editors/text_editor.rst:62
 msgid "Moves the view and cursor to the start of the text."
-msgstr ""
+msgstr "Di chuyển khung nhìn và con trỏ về đầu văn bản."
 
 #: ../../manual/editors/text_editor.rst:64
 msgid "Create Text Block"
@@ -146,7 +146,7 @@ msgstr "Tạo Khối Văn Bản -- Create Text Block"
 
 #: ../../manual/editors/text_editor.rst:65
 msgid "Creates a new internal text."
-msgstr ""
+msgstr "Tạo một văn bản nội bộ mới."
 
 #: ../../manual/editors/text_editor.rst:66
 msgid "Open Text Block"
@@ -156,7 +156,7 @@ msgstr "Mở Khối Văn Bản -- Open Text Block"
 msgid ""
 "Loads a text, a :doc:`File Browser </editors/file_browser/index>` appears"
 " :kbd:`Alt-O`."
-msgstr "Loads a text, a :doc:`File Browser </editors/file_browser/index>` appears :kbd:`Alt-O`."
+msgstr "Tải một văn bản, :doc:`Trình Duyệt Thảo Tập Tin -- File Browser </editors/file_browser/index>` hiện ra :kbd:`Alt-O`."
 
 #: ../../manual/editors/text_editor.rst:68
 msgid "Reload"
@@ -166,7 +166,7 @@ msgstr "Nạp Lại -- Reload"
 msgid ""
 "Reopens (reloads) the current buffer (all non-saved modifications are "
 "lost) :kbd:`Alt-R`."
-msgstr "Reopens (reloads) the current buffer (all non-saved modifications are lost) :kbd:`Alt-R`."
+msgstr "Mở lại (tải lại) bộ đệm hiện tại (tất cả các sửa đổi không lưu sẽ bị mất) :kbd:`Alt-R`."
 
 #: ../../manual/editors/text_editor.rst:70
 msgid "Save"
@@ -174,7 +174,7 @@ msgstr "Lưu -- Save"
 
 #: ../../manual/editors/text_editor.rst:71
 msgid "Saves an already open file :kbd:`Alt-S`."
-msgstr "Saves an already open file :kbd:`Alt-S`."
+msgstr "Lưu một tập tin đã mở :kbd:`Alt-S`."
 
 #: ../../manual/editors/text_editor.rst:73
 msgid "Save As"
@@ -184,7 +184,8 @@ msgstr "Lưu Thành -- Save As"
 msgid ""
 "Saves unsaved text as a text file, a :doc:`File Browser "
 "</editors/file_browser/index>` appears :kbd:`Shift-Ctrl-Alt-S`."
-msgstr "Saves unsaved text as a text file, a :doc:`File Browser </editors/file_browser/index>` appears :kbd:`Shift-Ctrl-Alt-S`."
+msgstr "Lưu văn bản chưa lưu dưới dạng tập tin văn bản, một
+Saves unsaved text as a text file, a :doc:`Trình Duyệt Thảo Tập Tin -- File Browser </editors/file_browser/index>` hiện ra :kbd:`Shift-Ctrl-Alt-S`."
 
 #: ../../manual/editors/text_editor.rst:75
 msgid "Make Internal"
@@ -192,7 +193,7 @@ msgstr "Gắn Làm Nội Bộ -- Make Internal"
 
 #: ../../manual/editors/text_editor.rst:76
 msgid "Stores the text inside the blend-file."
-msgstr ""
+msgstr "Lưu trữ văn bản nội trong tập tin blend"
 
 #: ../../manual/editors/text_editor.rst:78
 msgid "Run Script"
@@ -204,23 +205,23 @@ msgstr "Biên Soạn -- Edit"
 
 #: ../../manual/editors/text_editor.rst:81
 msgid "Cut :kbd:`Ctrl-X`"
-msgstr "-- Cut :kbd:`Ctrl-X`"
+msgstr "Cắt -- Cut :kbd:`Ctrl-X`"
 
 #: ../../manual/editors/text_editor.rst:82
 msgid "Cuts out the marked text into the text clipboard."
-msgstr ""
+msgstr "Cắt văn bản đã đánh dấu vào bảng nhớ tạm (clipboard) trong máy."
 
 #: ../../manual/editors/text_editor.rst:83
 msgid "Copy :kbd:`Ctrl-C`"
-msgstr "-- Copy :kbd:`Ctrl-C`"
+msgstr "Sao -- Copy :kbd:`Ctrl-C`"
 
 #: ../../manual/editors/text_editor.rst:84
 msgid "Copies the marked text into the text clipboard."
-msgstr ""
+msgstr "Sao chép văn bản đã đánh dấu vào bảng nhớ tạm (clipboard) trong máy."
 
 #: ../../manual/editors/text_editor.rst:85
 msgid "Paste :kbd:`Ctrl-V`"
-msgstr "-- Paste :kbd:`Ctrl-V`"
+msgstr "Dán -- Paste :kbd:`Ctrl-V`"
 
 #: ../../manual/editors/text_editor.rst:86
 msgid ""
