--- a/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/introduction.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/editors/uv_image/introduction.po
@@ -6,11 +6,11 @@
 #
 #, fuzzy
 msgid ""
-msgstr ""
+""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-17 22:20+0000\n"
-"PO-Revision-Date: 2018-11-14 21:46+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
@@ -26,7 +26,7 @@ msgstr "Giới Thiệu -- Introduction"
 
 #: ../../manual/editors/uv_image/introduction.rst:6
 msgid "(TODO add) see https://developer.blender.org/T46878"
-msgstr "(TODO add) see https://developer.blender.org/T46878"
+msgstr "(Nội dung cần viết thêm) xin xem thêm bài `Thiếu các tài liệu về Trình Biên Soạn Hình Ảnh -- Missing Image Editor docs <https://developer.blender.org/T46878>`__"
 
 #: ../../manual/editors/uv_image/introduction.rst:8
 msgid ""
