--- a/blender_docs/locale/vi/LC_MESSAGES/getting_started/about/history.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/getting_started/about/history.po
@@ -9,22 +9,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2019-02-04 12:38+0000\n"
-"PO-Revision-Date: 2019-02-05 02:07+0000\n"
-"Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
-"Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.6.0\n"
-
-#: ../../manual/getting_started/about/history.rst:4
-#, fuzzy
-msgid "Blender's History"
-msgstr ""
-"Project-Id-Version: Blender 2.79 Manual 2.79\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2019-02-05 02:07+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -33,8 +18,11 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.6.0\n"
 
+#: ../../manual/getting_started/about/history.rst:4
+msgid "Blender's History"
+msgstr "Lịch Sử Blender"
+
 #: ../../manual/getting_started/about/history.rst:6
-#, fuzzy
 msgid ""
 "In 1988, Ton Roosendaal co-founded the Dutch animation studio NeoGeo. "
 "NeoGeo quickly became the largest 3D animation studio in the Netherlands "
@@ -50,17 +38,17 @@ msgid ""
 "it became apparent to Ton that Blender could be used as a tool for other "
 "artists outside of NeoGeo."
 msgstr ""
-"Năm 1988, Ton Roosendaal cùng đồng nghiệp của mình đồng sáng lập hãng "
+"Năm 1988, Ton Roosendaal cùng đồng nghiệp của mình sáng lập hãng "
 "phim hoạt hình Hà Lan NeoGeo. NeoGeo nhanh chóng trở thành một xưởng phim"
 " hoạt hình 3D lớn nhất ở Hà Lan và là một trong những nhà hoạt hình hàng "
 "đầu ở châu Âu. NeoGeo đã tạo ra các sản phẩm đoạt giải thưởng (European "
 "Corporate Video Awards 1993 và 1995) cho các khách hàng lớn của công ty "
 "như công ty điện tử đa quốc gia Philips. Trong công ty NeoGeo, ông Ton "
-"chịu trách nhiệm cho cả: hai đạo diễn nghệ thuật và phát triển phần mềm "
+"chịu trách nhiệm cho cả hai: đạo diễn nghệ thuật và phát triển phần mềm "
 "nội bộ. Sau khi cân nhắc cẩn thận, ông Ton quyết định rằng bộ công cụ 3D "
-"nội bộ hiện tại của NeoGeo là quá cũ và cồng kềnh để duy trì, và cần được"
-" viết lại từ đầu. Vào năm 1995, việc viết lại này bắt đầu và dự định trở "
-"thành phần mềm tạo 3D mà tất cả chúng ta đều biết là Blender. Trong khi "
+"nội bộ hiện tại của NeoGeo là quá cũ kỹ và cồng kềnh để duy trì, và cần được"
+" viết lại từ đầu. Vào năm 1995, việc viết lại này đã bắt đầu và trên con đường trở "
+"thành phần mềm tạo 3D mà tất cả chúng ta đều biết hiện nay là Blender. Trong khi "
 "NeoGeo tiếp tục tinh chỉnh và cải thiện Blender, Ton hiển nhiên nhận ra "
 "rằng Blender có thể được sử dụng như một công cụ cho các nghệ sĩ khác "
 "ngoài NeoGeo."
@@ -96,7 +84,6 @@ msgstr ""
 "và tiềm năng to lớn của nó đã được xác nhận!"
 
 #: ../../manual/getting_started/about/history.rst:28
-#, fuzzy
 msgid ""
 "Following the success of the SIGGRAPH conference in early 2000, NaN "
 "secured financing of €4.5M from venture capitalists. This large inflow of"
@@ -107,10 +94,10 @@ msgid ""
 "application. By the end of 2000, the number of users registered on the "
 "NaN website exceeded 250,000."
 msgstr ""
-"Tiếp nối thành công của hội nghị SIGGRAPH vào đầu năm 2000, NaN đã được "
+"Tiếp theo thành công của hội nghị SIGGRAPH vào đầu năm 2000, NaN đã được "
 "cung cấp €4.5 triệu tài chính từ các nhà đầu tư mạo hiểm. Nguồn tiền lớn "
 "này đã giúp NaN nhanh chóng mở rộng hoạt động của mình. Chẳng mấy chốc, "
-"NaN đã tự hào có năm mươi nhân viên làm việc trên khắp thế giới, cố gắng "
+"NaN đã tự hào có năm mươi nhân viên làm việc trên khắp thế giới cố gắng "
 "cải thiện và quảng bá Blender. Vào mùa hè năm 2000, Blender 2.0 đã được "
 "phát hành. Phiên bản Blender này có thêm sự tích hợp của một công cụ trò "
 "chơi vào ứng dụng 3D. Đến cuối năm 2000, số lượng người dùng đăng ký trên"
@@ -137,28 +124,27 @@ msgid ""
 " of developers was not feasible, Ton Roosendaal founded the non-profit "
 "organization, Blender Foundation, in March 2002."
 msgstr ""
-"Thật không may, tham vọng và cơ hội của NaN không phù hợp với khả năng "
+"Thật không may là tham vọng và cơ hội của NaN không phù hợp với khả năng "
 "của công ty và thực tế thị trường thời đó. Việc mở rộng quá mức này đã "
 "dẫn đến việc phải tái khởi động NaN với sự tài trợ từ các nhà đầu tư mới "
 "và một công ty nhỏ hơn vào tháng 4 năm 2001. Sáu tháng sau sản phẩm phần "
-"mềm thương mại đầu tiên của NaN, Nhà xuất bản Blender (*Blender "
+"mềm thương mại đầu tiên của NaN, Nhà Xuất Bản Blender (*Blender "
 "Publisher*) đã được ra mắt. Sản phẩm này được nhắm vào thị trường đang "
-"phát triển của phương tiện truyền thông 3D dựa trên web tương tác. Do kết"
+"phát triển phương tiện truyền thông 3D dựa trên web tương tác. Do kết"
 " quả doanh số bán hàng thất vọng và khí hậu kinh tế khó khăn đang diễn "
 "ra, các nhà đầu tư mới đã quyết định đóng cửa tất cả các hoạt động của "
 "NaN. Việc ngưng hoạt động cũng đồng nghĩa là sự ngừng phát triển Blender."
 " Mặc dù có những thiếu sót rõ ràng trong phiên bản hiện tại của Blender, "
-"chẳng hạn như một kiến ​​trúc phần mềm nội bộ phức tạp, các tính năng "
-"chưa hoàn thiện và một giao diện người dùng (GUI) thiếu tiêu chuẩn, sự hỗ"
+"chẳng hạn như kiến ​​trúc phần mềm nội bộ thì phức tạp, các tính năng "
+"thì chưa hoàn thiện và một giao diện người dùng (GUI) thiếu tiêu chuẩn, sự hỗ"
 " trợ nhiệt tình từ cộng đồng người dùng và khách hàng đã mua Blender "
-"Publisher quá khứ có nghĩa là ông Ton không thể biện minh cho việc "
-"Blender bị tiêu hủy và trở nên một sản phẩm vô nghĩa. Do việc khởi động "
-"lại một công ty với một đội ngũ phát triển đủ lớn là bất khả thi, Ton "
+"Publisher trong quá khứ có nghĩa là ông Ton không thể biện minh cho việc "
+"Blender sẽ bị phai mờ đi và trở nên một sản phẩm vô nghĩa. Do việc khởi động "
+"lại một công ty với một đội ngũ phát triển đủ lớn là một việc bất khả thi, Ton "
 "Roosendaal đã thành lập tổ chức phi lợi nhuận Blender Foundation vào "
 "tháng 3 năm 2002."
 
 #: ../../manual/getting_started/about/history.rst:51
-#, fuzzy
 msgid ""
 "The Blender Foundation's primary goal was to find a way to continue "
 "developing and promoting Blender as a community-based `open source "
@@ -178,12 +164,12 @@ msgid ""
 "led by Blender's original creator, Ton Roosendaal."
 msgstr ""
 "Mục tiêu chính của Blender Foundation là tìm cách tiếp tục phát triển và "
-"quảng bá Blender như một dự án “nguồn mở” cơ sở cộng đồng -- `open source"
+"quảng bá Blender như một dự án “nguồn mở” trên cơ sở cộng đồng -- `open source"
 " <https://opensource.org/>`__. Vào tháng 7 năm 2002, Ton đã thành công "
-"trong việc khiến các nhà đầu tư NaN đồng ý với một kế hoạch của Blender "
-"Foundation phân phát Blender như một nguồn mở. Chiến dịch \"Blender Miễn "
-"Phí\" có nhã ý tìm nguồn quyên góp €100.000 để Foundation có thể mua bản "
-"quyền đối với mã nguồn Blender và quyền sở hữu trí tuệ từ các nhà đầu tư "
+"trong việc thuyết phục các nhà đầu tư NaN đồng ý với kế hoạch của Blender "
+"Foundation là sẽ phân phát Blender như một phần mềm nguồn mở. Chiến dịch \"Blender Miễn "
+"Phí\" được khởi tố và dự định tìm nguồn quyên góp số tiền €100.000 để Foundation có thể mua bản "
+"quyền mã nguồn Blender và quyền sở hữu trí tuệ từ các nhà đầu tư "
 "NaN, và sau đó phát hành Blender cho cộng đồng nguồn mở. Với một nhóm "
 "tình nguyện viên nhiệt tình, trong đó có một số nhân viên cũ của NaN, một"
 " chiến dịch gây quỹ đã được khởi động cho \"Blender Miễn Phí\". Trước sự "
