--- a/blender_docs/locale/vi/LC_MESSAGES/interface/controls/templates/color_ramp.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/interface/controls/templates/color_ramp.po
@@ -9,11 +9,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-01 19:20+0000\n"
-"PO-Revision-Date: 2019-01-21 01:47+0000\n"
+"POT-Creation-Date: 2019-02-24 20:16+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
-"Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
+"Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -162,12 +163,14 @@ msgid "Counter-Clockwise"
 msgstr "Ngược Chiều Kim Đồng Hồ -- Counter-Clockwise"
 
 #: ../../manual/interface/controls/templates/color_ramp.rst:56
-#: ../../manual/interface/controls/templates/color_ramp.rst:57
+#, fuzzy
 msgid "Counterclockwise around the HSV/HSL wheel."
-"Near"
-msgstr ""
-N
-"Gần -- Near"
+msgstr "Gần -- Near"
+
+#: ../../manual/interface/controls/templates/color_ramp.rst:57
+#, fuzzy
+msgid "Near"
+msgstr "Tuyến Tính -- Linear"
 
 #: ../../manual/interface/controls/templates/color_ramp.rst:58
 msgid "Nearest route around the wheel."
@@ -229,3 +232,4 @@ msgstr ":kbd:`LMB` (drag) moves colors."
 #: ../../manual/interface/controls/templates/color_ramp.rst:82
 msgid ":kbd:`Ctrl-LMB` (click) adds a new control point."
 msgstr ":kbd:`Ctrl-LMB` (click) adds a new control point."
+
