--- a/blender_docs/locale/vi/LC_MESSAGES/render/eevee/screen_space_effects/reflections.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/render/eevee/screen_space_effects/reflections.po
@@ -6,11 +6,11 @@
 #
 #, fuzzy
 msgid ""
-msgstr ""
+""
 "Project-Id-Version: Blender 2.80 Manual 2.80\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-24 23:43+0000\n"
-"PO-Revision-Date: 2018-12-07 01:52+0000\n"
+"PO-Revision-Date: 2019-02-26 15:56+0000\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@googlemail.com>\n"
 "Language-Team: London, UK <hoangduytran1960@googlemail.com>\n"
 "Language: vi\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../../manual/render/eevee/screen_space_effects/reflections.rst:4
 msgid "Reflections"
-msgstr "-- Reflections"
+msgstr "Phản Quang -- Reflections"
 
 #: ../../manual/render/eevee/screen_space_effects/reflections.rst:6
 msgid ""
@@ -37,7 +37,7 @@ msgid ""
 "visibility problem [TODO 2.8 image]. However, the reflected color will "
 "not contain the following effects: Subsurface scattering, volumetrics, "
 "screen space reflections, screen space refractions."
-msgstr "If a *Reflection Plane* is near a reflective surface, it will be used as the source for tracing rays more efficiently and fix the partial visibility problem [TODO 2.8 image]. However, the reflected color will not contain the following effects: Subsurface scattering, volumetrics, screen space reflections, screen space refractions."
+msgstr "If a *Reflection Plane* is near a reflective surface, it will be used as the source for tracing rays more efficiently and fix the partial visibility problem [Nội dung cần viết thêm 2.8, hình ảnh]. However, the reflected color will not contain the following effects: Subsurface scattering, volumetrics, screen space reflections, screen space refractions."
 
 #: ../../manual/render/eevee/screen_space_effects/reflections.rst:14
 msgid "Reference"
@@ -53,7 +53,7 @@ msgstr ":menuselection:`Render --> Screen Space Reflections`"
 
 #: ../../manual/render/eevee/screen_space_effects/reflections.rst:24
 msgid "Refractions"
-msgstr " -- Refractions"
+msgstr "Khúc Xạ -- Refractions"
 
 #: ../../manual/render/eevee/screen_space_effects/reflections.rst:20
 msgid ""
@@ -67,7 +67,7 @@ msgstr "Screen space refractions work the same way as screen space reflections a
 
 #: ../../manual/render/eevee/screen_space_effects/reflections.rst:28
 msgid "Half Resolution Trace"
-msgstr " -- Half Resolution Trace"
+msgstr "Dò Tia Bán Độ Phân Giải -- Half Resolution Trace"
 
 #: ../../manual/render/eevee/screen_space_effects/reflections.rst:27
 msgid ""
@@ -78,7 +78,7 @@ msgstr ""
 
 #: ../../manual/render/eevee/screen_space_effects/reflections.rst:32
 msgid "Trace Precision"
-msgstr " -- Trace Precision"
+msgstr "Độ Chính Xác của Dò Tia -- Trace Precision"
 
 #: ../../manual/render/eevee/screen_space_effects/reflections.rst:31
 msgid ""
@@ -100,7 +100,7 @@ msgstr ""
 
 #: ../../manual/render/eevee/screen_space_effects/reflections.rst:39
 msgid "Edge Fading"
-msgstr " -- Edge Fading"
+msgstr "Mờ Dần Cạnh -- Edge Fading"
 
 #: ../../manual/render/eevee/screen_space_effects/reflections.rst:39
 msgid ""
