Most recently changes updates as of today

--- a/blender_docs/locale/vi/LC_MESSAGES/about/contribute/index.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/about/contribute/index.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Blender 2.79 Manual 2.79\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-03-22 21:50-0400\n"
-"PO-Revision-Date: 2020-02-26 21:13+0000\n"
+"PO-Revision-Date: 2020-04-10 19:26+0100\n"
 "Last-Translator: Hoang Duy Tran <hoangduytran1960@gmail.com>\n"
 "Language: vi\n"
 "Language-Team: London, UK <hoangduytran1960@gmail.com>\n"
@@ -26,20 +26,11 @@ msgstr "Đóng Góp -- Contribute"
 
 #: ../../manual/about/contribute/index.rst:7
 #, fuzzy
-msgid ""
-"The Blender Manual is a community driven effort to which anyone can "
-"contribute. Whether you like to fix a tiny spelling mistake or rewrite an"
-" entire chapter, your help with the Blender manual is most welcome!"
-msgstr ""
-"Cho dù bạn muốn sửa đổi một lỗi đánh vần nhỏ, hoặc muốn viết lại toàn bộ "
-"nội dung của một chương đi chăng nữa, thì sự giúp đỡ của bạn với bản "
-"Hướng Dẫn Sử Dụng Blender cũng rất được hoan nghênh!"
+msgid "The Blender Manual is a community driven effort to which anyone can contribute. Whether you like to fix a tiny spelling mistake or rewrite an entire chapter, your help with the Blender manual is most welcome!"
+msgstr "Cho dù bạn muốn sửa đổi một lỗi đánh vần nhỏ, hoặc muốn viết lại toàn bộ nội dung của một chương đi chăng nữa, thì sự giúp đỡ của bạn với bản Hướng Dẫn Sử Dụng Blender cũng rất được hoan nghênh!"
 
 #: ../../manual/about/contribute/index.rst:11
-msgid ""
-"If you find an error in the documentation, please `report the problem "
-"<https://developer.blender.org/maniphest/task/edit/form/default/?project"
-"=PHID-PROJ-c4nvvrxuczix2326vlti>`__"
+msgid "If you find an error in the documentation, please `report the problem <https://developer.blender.org/maniphest/task/edit/form/default/?project=PHID-PROJ-c4nvvrxuczix2326vlti>`__"
 msgstr ""
 
 #: ../../manual/about/contribute/index.rst:14
@@ -69,9 +60,7 @@ msgstr "Mối Liên Lạc -- Contacts"
 #: ../../manual/about/contribute/index.rst:59
 #, fuzzy
 msgid "`project page <https://developer.blender.org/project/profile/53/>`__."
-msgstr ""
-"`Trang dự án <https://developer.blender.org/project/profile/53/>`__ -- "
-"của các nhóm chịu trách nhiệm về bản Hướng Dẫn Sử Dụng."
+msgstr "`Trang dự án <https://developer.blender.org/project/profile/53/>`__ -- của các nhóm chịu trách nhiệm về bản Hướng Dẫn Sử Dụng."
 
 #: ../../manual/about/contribute/index.rst:60
 msgid "An overview of the documentation project."
@@ -90,9 +79,7 @@ msgid "`Devtalk <https://devtalk.blender.org/c/documentation/12>`__"
 msgstr ""
 
 #: ../../manual/about/contribute/index.rst:64
-msgid ""
-"A forum based discussions on writing and translating documentation. This "
-"includes the user manual, wiki, release notes, and code docs."
+msgid "A forum based discussions on writing and translating documentation. This includes the user manual, wiki, release notes, and code docs."
 msgstr ""
 
 #: ../../manual/about/contribute/index.rst:66
@@ -102,17 +89,12 @@ msgstr ""
 #: ../../manual/about/contribute/index.rst:67
 #, fuzzy
 msgid "``#docs`` channel for informal discussions in real-time."
-msgstr ""
-"Kênh liên lạc ``#blenderwiki`` trong :ref:`irc-chat <irc-channels>` là "
-"kênh dùng cho các cuộc bàn bạc thân thiện thời gian thật."
+msgstr "Kênh liên lạc ``#blenderwiki`` trong :ref:`irc-chat <irc-channels>` là kênh dùng cho các cuộc bàn bạc thân thiện thời gian thật."
 
 #: ../../<generated>:1
 #, fuzzy
 msgid "`Project Workboard <https://developer.blender.org/project/board/53/>`__"
-msgstr ""
-"Bảng phân công việc -- `Workboard "
-"<https://developer.blender.org/project/board/53/>`__ -- dành cho các "
-"nhiệm vụ cần thi hành."
+msgstr "Bảng phân công việc -- `Workboard <https://developer.blender.org/project/board/53/>`__ -- dành cho các nhiệm vụ cần thi hành."
 
 #: ../../manual/about/contribute/index.rst:69
 msgid "Manage tasks such as bugs, todo lists, and future plans."
