--- a/blender_docs/locale/vi/LC_MESSAGES/compositing/types/converter/id_mask.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/compositing/types/converter/id_mask.po
@@ -30,7 +30,7 @@ msgstr "Nút Chắn Lọc ID."
 
 #: ../../manual/compositing/types/converter/id_mask.rst:12
 msgid "The *ID Mask Node* can be used to access an alpha mask per object or per material."
-msgstr "*Nút Chắn Lọc ID* (lọc chỉ số) có thể được sử dụng để truy cập màn chắn alpha trên mỗi một vật thể hoặc trên mỗi một vật liệu."
+msgstr "*Nút Chắn Lọc ID -- ID Mask Node* (*lọc chỉ số*) có thể được sử dụng để truy cập màn chắn alpha trên mỗi một vật thể hoặc trên mỗi một vật liệu nào đó."
 
 #: ../../manual/compositing/types/converter/id_mask.rst:16
 msgid "Inputs"
@@ -42,7 +42,7 @@ msgstr "Giá trị ID -- ID value"
 
 #: ../../manual/compositing/types/converter/id_mask.rst:19
 msgid "Input for the *Object Index* or *Material Index* render pass. Which is an output of the :doc:`Render Layers node </compositing/types/input/render_layers>` or the :doc:`Image node </compositing/types/input/render_layers>` with a multi-layer format."
-msgstr "Chỉ số lượt kết xuất cung cấp, *Chỉ Số Vật Thể* (Object Index) hoặc lượt *Chỉ Số Chất Liệu* (Material Index), tức là đầu ra của :doc:`Nút Tầng Lớp Kết Xuất -- Render Layers node </compositing/types/input/render_layers>` hoặc :doc:`Nút hình ảnh -- Image node </compositing/types/input/render_layers>` với định dạng đa tầng lớp (multi-layer)."
+msgstr "Chỉ số lượt kết xuất cung cấp, *Chỉ Số Vật Thể -- Object Index* hoặc lượt *Chỉ Số Chất Liệu -- Material Index*, tức là đầu ra của :doc:`Nút Tầng Lớp Kết Xuất -- Render Layers node </compositing/types/input/render_layers>` hoặc :doc:`Nút Hình Ảnh -- Image node </compositing/types/input/render_layers>` định dạng đa tầng lớp (*multi-layer*)."
 
 #: ../../manual/compositing/types/converter/id_mask.rst:25
 msgid "Properties"
@@ -62,7 +62,7 @@ msgstr "Chống Răng Cưa -- Anti-Aliased"
 
 #: ../../manual/compositing/types/converter/id_mask.rst:30
 msgid "This post-process function refines the mask. See :term:`anti-aliasing`."
-msgstr "Chức năng hậu xử lý này tinh chỉnh màn chắn. Xin xem thêm mục *Chống Răng Cưa* -- :term:`anti-aliasing`."
+msgstr "Chức năng hậu xử lý này tinh chỉnh màn chắn. Xin xem thêm mục :term:`anti-aliasing -- Chống Răng Cưa`."
 
 #: ../../manual/compositing/types/converter/id_mask.rst:34
 msgid "Outputs"
@@ -74,11 +74,11 @@ msgstr ""
 
 #: ../../manual/compositing/types/converter/id_mask.rst:37
 msgid "The mask is white where the object is and black where it is not. If the object is transparent, the alpha mask represent that with gray values."
-msgstr "Màn chắn là màu trắng, trong khi vật thể, hoặc những nơi không phải là màn chắn, là màu đen. Nếu vật thể trong suốt thì màn chắn alpha biểu thị điều này dùng các giá trị màu xám."
+msgstr "Màn chắn là màu trắng, trong khi vật thể, hoặc những nơi không phải là màn chắn, sẽ là màu đen. Nếu vật thể trong suốt thì màn chắn alpha biểu thị điều này dùng các giá trị màu xám."
 
 #: ../../manual/compositing/types/converter/id_mask.rst:42
 msgid "In Blender Internal if a transparent object is in front of another, the mask will not reflect partial visibility of the object behind."
-msgstr "Trong Blender Nội Tại (*Blender Internal*) nếu một vật thể trong suốt nằm ở phía trước một vật thể khác thì màn chắn sẽ không phản ảnh khả năng hiển thị một phần của vật thể nằm ở phía sau."
+msgstr "Trong Blender Nội Tại (*Blender Internal*), nếu một vật thể trong suốt nằm ở phía trước một vật thể khác, thì màn chắn sẽ không phản ảnh khả năng hiển thị một phần của vật thể nằm ở phía sau."
 
 #: ../../manual/compositing/types/converter/id_mask.rst:47
 msgid "Setup"
@@ -87,7 +87,7 @@ msgstr "Sắp Đặt -- Setup"
 #: ../../manual/compositing/types/converter/id_mask.rst:49
 #, fuzzy
 msgid "An index can be specify for any object or material in the scene. The Object Index can be set in Properties Editor :menuselection:`Object --> Relations --> Pass Index` and :menuselection:`Material --> Settings --> Pass Index` for the Material Index. To be accessible after rendering, *Object Index* or *Material Index* render pass has to be enabled."
-msgstr "Một chỉ số có thể được chỉ định cho bất kỳ một vật thể hoặc nguyên liệu nào đó trong cảnh. Chỉ Số Vật Thể có thể được đặt trong Trình Biên Soạn Tính Chất :menuselection:`Vật Thể (Object) --> Quan Hệ (Relations) --> Chỉ Số Lượt (Pass Index)` và :menuselection:`Nguyên liệu (Material) --> Tùy Chọn (Options) --> Chỉ Số Lượt (Pass Index)` đối với Chỉ Số Chất Liệu. Để có thể truy cập được sau khi kết xuất, lượt kết xuất *Chỉ Số Vật Thể* hoặc *Chỉ Số Nguyên Liệu* phải được bật lên."
+msgstr "Một chỉ số có thể được chỉ định cho bất kỳ một vật thể hoặc nguyên vật liệu nào đó trong cảnh. Chỉ Số Vật Thể (*Object Index*) có thể được đặt trong Trình Biên Soạn Tính Chất :menuselection:`Vật Thể (Object) --> Quan Hệ (Relations) --> Chỉ Số Lượt (Pass Index)` và :menuselection:`Nguyên Vật Liệu (Material) --> Tùy Chọn (Options) --> Chỉ Số Lượt (Pass Index)` cho Chỉ Số Chất Liệu. Để có thể truy cập được sau khi kết xuất xong, lượt kết xuất *Chỉ Số Vật Thể -- Object Index* hoặc *Chỉ Số Nguyên Vật Liệu -- Material Index* phải được bật lên."
 
 #: ../../manual/compositing/types/converter/id_mask.rst:56
 msgid "Object Pass Index."
