--- a/blender_docs/locale/vi/LC_MESSAGES/compositing/types/color/color_balance.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/compositing/types/color/color_balance.po
@@ -16,7 +16,7 @@ msgstr ""
 "Language-Team: London, UK <hoangduytran1960@gmail.com>\n"
 "Plural-Forms: nplurals=1; plural=0\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
 
