--- a/blender_docs/locale/vi/LC_MESSAGES/compositing/types/converter/combine_separate.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/compositing/types/converter/combine_separate.po
@@ -30,7 +30,7 @@ msgstr "Tất cả các nút này thực chất ra đều giống nhau:"
 
 #: ../../manual/compositing/types/converter/combine_separate.rst:15
 msgid "Separate: Split out an image into its composite color channels."
-msgstr "Tách Phân: Tách hình ảnh ra theo các kênh màu tổng hợp của nó."
+msgstr "Tách Phân: Chia hình ảnh ra thành các kênh màu tổng hợp của nó."
 
 #: ../../manual/compositing/types/converter/combine_separate.rst:16
 msgid "Combine: Re/combine an image from its composite color channels."
@@ -42,11 +42,11 @@ msgstr "Các nút này có thể được sử dụng để thao tác từng kê
 
 #: ../../manual/compositing/types/converter/combine_separate.rst:21
 msgid "In compositing and texture context each node supports the Alpha channel. In the texture context only RGB color space is available. In the shading context of the Blender internal adds HSV and the Cycles shading context offers an additional pair of nodes to combine/separate a vector (XYZ)."
-msgstr "Trong bối cảnh tổng hợp và chất liệu, nút nào cũng hỗ trợ kênh Alpha, song trong bối cảnh chất liệu, chỉ có không gian màu Đỏ, Lục, Lam (*RGB*) là có thể sử dụng được (không có Alpha) mà thôi. Trong bối cảnh tô bóng của Blender nội tại (*Blender internal*), bạn còn có thể làm việc với :abbr:`HSV (Sắc Màu (*Hue*), Độ Bão Hòa (*Saturation*), Giá Trị (*Value*), viết tắt là HSV)`, và trong tô bóng Cycles, làm việc với cặp nút :abbr:`HSV, XYZ (hai cách để biểu thị màu sắc khác nhau)` để kết hợp/tách phân một véctơ (XYZ)."
+msgstr "Trong bối cảnh tổng hợp và chất liệu, mỗi nút đều có hỗ trợ kênh Alpha, song trong bối cảnh chất liệu, chỉ có không gian màu RGB là có thể sử dụng được (không có Alpha). Trong bối cảnh tô bóng của Blender nội tại (*Blender internal*), bạn còn có thể làm việc với :abbr:`HSV (trong cách phân màu thành các thành phần về Sắc Thái (*Hue*), Độ Bão Hòa (*Saturation*), Giá Trị (*Value*), viết tắt là HSV))`, và trong tô bóng Cycles, làm việc với cặp nút :abbr:`HSV, XYZ (hai cách biểu thị màu sắc khác nhau)` để kết hợp/tách phân một véctơ (XYZ)."
 
 #: ../../manual/compositing/types/converter/combine_separate.rst:26
 msgid "The Combine nodes could also be used to input single color values. For RGBA and HSVA color spaces it is recommended to use the :doc:`/compositing/types/input/rgb`. Some common operations could easier be executed with the :doc:`/compositing/types/color/index`."
-msgstr "Các nút Kết Hợp (Combine) cũng có thể được sử dụng để nhập các đơn giá trị màu sắc. Đối với không gian màu RGBA và HSVA, bạn nên sử dụng :doc:`/compositing/types/input/rgb`. Một số thao tác phổ biến có thể dễ dàng được thi hành hơn với :doc:`/compositing/types/color/index`."
+msgstr "Các nút Kết Hợp (*Combine*) cũng có thể được sử dụng để nhập các đơn giá trị màu sắc. Đối với không gian màu RGBA và HSVA, bạn nên sử dụng :doc:`/compositing/types/input/rgb`. Một số thao tác phổ biến có thể dễ dàng được thi hành hơn với :doc:`/compositing/types/color/index`."
 
 #: ../../manual/compositing/types/converter/combine_separate.rst:32
 msgid "Separate/Combine RGBA Nodes"
@@ -87,11 +87,11 @@ msgstr "R (Đỏ) -- R (Red)"
 
 #: ../../manual/compositing/types/converter/combine_separate.rst:52
 msgid "G (Green)"
-msgstr "G (Xanh Lục) -- G (Green)"
+msgstr "G (Lục) -- G (Green)"
 
 #: ../../manual/compositing/types/converter/combine_separate.rst:53
 msgid "B (Blue)"
-msgstr "B (Lam)"
+msgstr "B (Lam) -- B (Blue)"
 
 #: ../../manual/compositing/types/converter/combine_separate.rst:54
 #: ../../manual/compositing/types/converter/combine_separate.rst:103
@@ -209,9 +209,9 @@ msgstr "Một ví dụ về việc tỷ lệ hóa kênh về Độ Sáng (Lumina
 
 #: ../../manual/compositing/types/converter/combine_separate.rst:184
 msgid "This example has a *Math (Multiply)* node increasing the luminance channel (Y) of the image to make it brighter."
-msgstr "Ví dụ này dùng nút *Toán (Nhân)* (Math (Multiply)) để tăng kênh độ sáng (Y) của hình ảnh, để làm cho nó sáng hơn."
+msgstr "Ví dụ này dùng nút *Toán (Nhân) -- (Math (Multiply))* để tăng kênh độ sáng (Y) của hình ảnh lên, làm cho nó sáng hơn."
 
 #: ../../manual/compositing/types/converter/combine_separate.rst:189
 msgid "If running these channels through a *Color Ramp* node to adjust value, use the Cardinal scale for accurate representation. Using the Exponential scale on the luminance channel gives a high-contrast effect."
-msgstr "Nếu thông nối các kênh này qua nút *Dốc Màu* (Color Ramp) để điều chỉnh giá trị, thì hãy sử dụng thang đo Chính (Cardinal scale) để biểu đạt được chính xác. Sử dụng thang đo Lũy Thừa (Exponential scale) trên kênh độ sáng (luminance channel) để đạt được hiệu ứng tương phản cao."
+msgstr "Nếu thông nối các kênh này qua nút *Dốc Màu -- Color Ramp* để điều chỉnh giá trị, thì hãy sử dụng thang đo Chính (*Cardinal scale*) để biểu đạt được chính xác. Sử dụng thang đo Lũy Thừa (*Exponential scale*) trên kênh độ sáng (*luminance channel*) để đạt được hiệu ứng tương phản cao."
 
