Working stage of text_abbrev.py with case conversion operator

--- a/blender_docs/locale/vi/LC_MESSAGES/addons/add_curve/curve_tools.po
+++ b/blender_docs/locale/vi/LC_MESSAGES/addons/add_curve/curve_tools.po
@@ -301,7 +301,7 @@ msgstr "Xóa Đường Cong Spline -- Remove Splines"
 
 #: C:/Users/Fam/Documents/blenderDocs/manual/addons/add_curve/curve_tools.rst:117
 msgid "Remove selected splines based on a threshold."
-msgstr "Xóa Cái được Chọn Đường Cong Spline based BẬT một Ngưỡng."
+msgstr "Xóa Cái được Chọn *:abbr:`Đường Cong (Spline)`* based BẬT một Ngưỡng."
 
 #: C:/Users/Fam/Documents/blenderDocs/manual/addons/add_curve/curve_tools.rst:118
 msgid "Join Splines"
